test/fail/PragmaError.curry
{-# LANGUAGE ERROR #-}
module PragmaError where

